--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,59 @@
-body {
+body{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.map{
+  width: 100vw;
+  height: 100vh;
+  position: relative;
 }
+
+.location-icon{
+  font-size: 2rem;
+  color: red;
+}
+
+.location-info{
+  position: absolute;
+  top: 50px;
+  right: 50px;
+  width: 400px;
+  min-height: 200px;
+  padding: 20px;
+  background-color:rgba(0, 0, 0, 0.6) ;
+  color: white;
+  border-radius:10px ;
+  font-size: 18px;
+}
+
+.location-icon ul{
+  list-style-type: none;
+  padding:0 ;
+}
+
+.location-icon li {
+  padding: 5px 0;
+}
+
+.header{
+  display: flex;
+  flex: 1;
+  align-items: center;
+  justify-content: space-evenly;
+  background-color: red;
+  color: white;
+}
+
+.header__info{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 15%;
+}
+
+.header-icon{
+  font-size: 2rem;
+}
+
+
